# ether-rest-barn

./: clean.py  main.py  pyproject.toml  ss.py
notebooks/: explore.ipynb  modules.ipynb  modules_data.jsonl
