[project]
name = "try-ms-automation-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mss>=10.1.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
